terceira etapa do front end home

--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
                 <div class="home-corpo-buscar">
 
                     <div class="home-box-icones-bucsar">
-                        <input class="home-input" type="text">
+                        <input class="home-input" type="text" placeholder="Digite aqui para buscar">
                         <img class="home-buscar-img" src="img/buscar.png" alt="">
                         <p class="home-linha-divisao">
                             ------
@@ -91,9 +91,7 @@
     <section id="home-section-destaque">
         <div class="home-box-texto-destaque">
             <p class="home-texto-destaque">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere quis aspernatur quo natus? Dolores
-                delectus, corporis a placeat commodi accusamus vel architecto sunt ea dolorum esse blanditiis, illum
-                officia. Voluptatum.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere quis aspernatur quo natus? Dolores delectus, corporis a placeat commodi accusamus vel architecto sunt ea dolorum esse blanditiis, illum officia. Voluptatum.
             </p>
             <hr class="home-destaque-hr">
         </div>
@@ -118,9 +116,7 @@
             <hr class="home-beneficios-hr">
 
             <p class="home-texto-p-beneficios">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione expedita dicta asperiores? Tempore
-                velit, quisquam facilis maiores repellat, debitis numquam voluptatibus tenetur sed facere neque
-                praesentium provident, magnam expedita veritatis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione expedita dicta asperiores? Tempore velit, quisquam facilis maiores repellat, debitis numquam voluptatibus tenetur sed facere neque praesentium provident, magnam expedita veritatis.
             </p>
         </div>
 
@@ -136,9 +132,7 @@
 
             <div class="home-box-texto-beneficios-img1">
                 <p class="home-box-texto-p1-beneficios">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit laborum suscipit reprehenderit
-                    quis. Magnam eaque aut maxime est, excepturi autem non laboriosam veniam veritatis. Nam nobis ipsa
-                    repellat maiores?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit laborum suscipit reprehenderit quis. Magnam eaque aut maxime est, excepturi autem non laboriosam veniam veritatis. Nam nobis ipsa repellat maiores?
                 </p>
                 <button>
                     <a href=""> Inscreva-se </a>
@@ -160,9 +154,7 @@
 
             <div class="home-box-texto-beneficios-img2">
                 <p class="home-box-texto-p-beneficios2">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit laborum suscipit reprehenderit
-                    quis. Magnam eaque aut maxime est, excepturi autem non laboriosam veniam veritatis. Nam nobis ipsa
-                    repellat maiores?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit laborum suscipit reprehenderit quis. Magnam eaque aut maxime est, excepturi autem non laboriosam veniam veritatis. Nam nobis ipsa repellat maiores?
                 </p>
                 <button>
                     <a href=""> Inscreva-se </a>
@@ -176,32 +168,61 @@
     <section id="home-section-contador">
         <img class="home-contador-img" src="img/road-2930115.jpg" alt="Imagem de uma mulher ao fundo codificando">
 
-        <div class="home-section-box-contador" >
+        <div class="home-section-box-contador">
 
             <div class="home-contador-icones">
                 <img class="home-contador-icone-img1" src="img/tickets.png" alt="">
-                <img class="home-contador-icone-img2"  src="img/mapa.png" alt="">
-                <img class="home-contador-icone-img3"  src="img/bandeira.png" alt="">
-                <img class="home-contador-icone-img4"  src="img/comunidade.png" alt="">
+                <img class="home-contador-icone-img2" src="img/mapa.png" alt="">
+                <img class="home-contador-icone-img3" src="img/bandeira.png" alt="">
+                <img class="home-contador-icone-img4" src="img/comunidade.png" alt="">
             </div>
 
             <div class="home-contador-numeros">
-                <p class="home-contador-icone-p1"  > + 100</p>
-                <p class="home-contador-icone-p2"  > + 20</p>
-                <p class="home-contador-icone-p3"  > + 400</p>
-                <p class="home-contador-icone-p4"  > + 8 </p>
+                <p class="home-contador-icone-p1"> + 100</p>
+                <p class="home-contador-icone-p2"> + 20</p>
+                <p class="home-contador-icone-p3"> + 400</p>
+                <p class="home-contador-icone-p4"> + 8 </p>
             </div>
 
             <div class="home-contador-descricao">
-                <h3 class="home-contador-descricao-h3-1"   > Eventos Submetidos </h3>
-                <h3 class="home-contador-descricao-h3-2"   >  Eventos Realizados </h3>
-                <h3 class="home-contador-descricao-h3-3"   > Comunidades </h3>
-                <h3 class="home-contador-descricao-h3-4"   > Categorias </h3>
+                <h3 class="home-contador-descricao-h3-1"> Eventos Submetidos </h3>
+                <h3 class="home-contador-descricao-h3-2"> Eventos Realizados </h3>
+                <h3 class="home-contador-descricao-h3-3"> Comunidades </h3>
+                <h3 class="home-contador-descricao-h3-4"> Categorias </h3>
             </div>
-            
+
         </div>
 
 
+    </section>
+
+    <section id="home-section-mobile">
+        <div class="home-section-mobile-texto">
+            <p class="home-section-mobile-texto-p">
+                Acompanhe os Eventos <br> pelo seu Celular
+
+            </p>
+        </div>
+
+        <div class="home-section-mobile-box">
+            <div class="home-section-mobile-box-texto">
+                <div class="home-section-mobile-box-texto-p">
+                    <p class="home-section-mobile-box-p">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam maxime non sit, dicta laudantium obcaecati quas explicabo repudiandae. Enim nesciunt vitae temporibus distinctio soluta molestias, placeat vero atque ad! Unde.
+                    </p>
+
+                    <button>
+                        <a href=""> Inscreva-se </a>
+                    </button>
+
+                </div>
+
+            </div>
+
+            <div>
+                <img class="home-section-mobile-img" src="img/mobile.png" alt="">
+            </div>
+        </div>
     </section>
 
 
