--- a/home.html
+++ b/home.html
@@ -105,6 +105,7 @@
                     <img src="https://picsum.photos/id/239/550/550" alt="">
 
                 </div>
+
                 <div class="item">
                     <img src="https://picsum.photos/id/240/550/550" alt="">
 
@@ -121,15 +122,15 @@
                     <img src="https://picsum.photos/id/243/550/550" alt="">
                 </div>
                 <div class="item">
-                    <img src="https://picsum.photos/id/244/550/550" alt="">
+                    <img src="https://picsum.photos/id/250/550/550" alt="">
 
                 </div>
                 <div class="item">
-                    <img src="https://picsum.photos/id/245/550/550" alt="">
+                    <img src="https://picsum.photos/id/252/550/550" alt="">
 
                 </div>
                 <div class="item">
-                    <img src="https://picsum.photos/id/246/550/550" alt="">
+                    <img src="https://picsum.photos/id/255/550/550" alt="">
 
                 </div>
                 <div class="item">
@@ -162,9 +163,7 @@
             <hr class="home-beneficios-hr">
 
             <p class="home-texto-p-beneficios">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione expedita dicta asperiores? Tempore
-                velit, quisquam facilis maiores repellat, debitis numquam voluptatibus tenetur sed facere neque
-                praesentium provident, magnam expedita veritatis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione expedita dicta asperiores? Tempore velit, quisquam facilis maiores repellat, debitis numquam voluptatibus tenetur sed facere neque praesentium provident, magnam expedita veritatis.
             </p>
         </div>
 
@@ -180,9 +179,7 @@
 
             <div class="home-box-texto-beneficios-img1 animated bounceInDown">
                 <p class="home-box-texto-p1-beneficios ">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit laborum suscipit reprehenderit
-                    quis. Magnam eaque aut maxime est, excepturi autem non laboriosam veniam veritatis. Nam nobis ipsa
-                    repellat maiores?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit laborum suscipit reprehenderit quis. Magnam eaque aut maxime est, excepturi autem non laboriosam veniam veritatis. Nam nobis ipsa repellat maiores?
                 </p>
 
                 <button class="btn">
@@ -203,14 +200,12 @@
                 </div>
             </div>
 
-            <div class="home-box-texto-beneficios-img2">
+            <div class="home-box-texto-beneficios-img2 animated bounceInLeft">
                 <p class="home-box-texto-p2-beneficios">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit laborum suscipit reprehenderit
-                    quis. Magnam eaque aut maxime est, excepturi autem non laboriosam veniam veritatis. Nam nobis ipsa
-                    repellat maiores?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit laborum suscipit reprehenderit quis. Magnam eaque aut maxime est, excepturi autem non laboriosam veniam veritatis. Nam nobis ipsa repellat maiores?
                 </p>
 
-                <button class="btn">
+                <button class="btn btn2">
                     <a href=""> Inscreva-se </a>
                 </button>
 
@@ -225,26 +220,20 @@
 
         <div class="home-section-box-contador">
 
-            <div class="home-contador-icones">
+            <div class="home-contador-numeros">
                 <img class="home-contador-icone-img1" src="img/tickets.png" alt="">
                 <img class="home-contador-icone-img2" src="img/mapa.png" alt="">
                 <img class="home-contador-icone-img3" src="img/bandeira.png" alt="">
                 <img class="home-contador-icone-img4" src="img/comunidade.png" alt="">
             </div>
 
-            <div class="home-contador-numeros">
-                <p class="home-contador-icone-p1"> + 100</p>
-                <p class="home-contador-icone-p2"> + 20</p>
-                <p class="home-contador-icone-p3"> + 400</p>
-                <p class="home-contador-icone-p4"> + 8 </p>
+            <div class="home-contador-descricao">
+                <h3 class="home-contador-descricao-h3-1"> 100 - Eventos Submetidos </h3>
+                <h3 class="home-contador-descricao-h3-2"> 20 - Eventos Realizados </h3>
+                <h3 class="home-contador-descricao-h3-3"> 400 - Comunidades </h3>
+                <h3 class="home-contador-descricao-h3-4"> 08 - Categorias </h3>
             </div>
 
-            <div class="home-contador-descricao">
-                <h3 class="home-contador-descricao-h3-1"> Eventos Submetidos </h3>
-                <h3 class="home-contador-descricao-h3-2"> Eventos Realizados </h3>
-                <h3 class="home-contador-descricao-h3-3"> Comunidades </h3>
-                <h3 class="home-contador-descricao-h3-4"> Categorias </h3>
-            </div>
 
         </div>
 
@@ -272,12 +261,10 @@
             <div>
                 <img class="home-section-mobile-img" src="img/mobile.png" alt="">
             </div>
-            <div class="home-section-mobile-box-texto">
+            <div class="home-section-mobile-box-texto animated bounceInUp">
                 <div class="home-section-mobile-box-texto-p">
                     <p class="home-section-mobile-box-p">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam maxime non sit, dicta laudantium
-                        obcaecati quas explicabo repudiandae. Enim nesciunt vitae temporibus distinctio soluta
-                        molestias, placeat vero atque ad! Unde.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam maxime non sit, dicta laudantium obcaecati quas explicabo repudiandae. Enim nesciunt vitae temporibus distinctio soluta molestias, placeat vero atque ad! Unde.
                     </p>
 
                 </div>
@@ -302,7 +289,7 @@
         <div class="home-footer-box1">
 
             <div class="home-footer-titulo">
-                <p class="home-footer-texto">
+                <p class="home-footer-texto estiloFooter">
                     Square Events
                 </p>
             </div>
@@ -310,18 +297,18 @@
             <div class="home-footer-informacao">
 
                 <div class="home-footer-suaConta">
-                    <p>
+                    <p class="estiloFooter">
                         Sua Conta
                     </p>
 
-                    <a href=""> Ajuda (FAQ) </a>
+                    <a class="estiloFooter" href=""> Ajuda (FAQ) </a>
 
-                    <a href=""> Cadastre-se </a>
+                    <a class="estiloFooter" href=""> Cadastre-se </a>
 
                 </div>
 
                 <div class="home-footer-redeSocial">
-                    <p>
+                    <p class="estiloFooter">
                         Redes Socias
                     </p>
                     <div>
@@ -332,8 +319,11 @@
                 </div>
 
                 <div class="home-footer-contato">
-                    <p>
-                        email.com
+                    <p class="estiloFooter">
+                        Contato
+                    </p>
+                    <p class="estiloFooter">
+                        <a href="mailto:contato@thoughtworks.com.br">contato@thoughtworks.com.br</a>
                     </p>
                 </div>
 
@@ -344,7 +334,7 @@
         <div class="home-footer-box2">
 
             <div class="home-footer-logo">
-                <a href="">
+                <a class="estiloFooter" href="">
                     <img class="home-logoarte-footer" src="img/logoarte.png" alt="">
                 </a>
 
@@ -352,12 +342,16 @@
             </div>
 
             <div class="home-footer-nomeEventos">
-                <p> fhvgfdbfjhgng</p>
-                <p> hgfdsgdhjk</p>
+                <p class="estiloFooter"> @thoughtworks</p>
+                <p class="estiloFooter">
+                    @SquareEvents
+                </p>
             </div>
 
             <div class="home-footer-direitoReservado">
-                <p></p>
+                <p class="estiloFooter">
+                    Todos os direitos reservados
+                </p>
             </div>
 
     </footer>
