projeto manutenção home

--- a/home.html
+++ b/home.html
@@ -18,42 +18,42 @@
     <header id="home-header">
         <nav id="home-nav">
 
-            <ul className="topnav">
-                <!-- Defina uma classNamee a Ul -->
+            <ul class="topnav">
+                <!-- Defina uma classe a Ul -->
 
-                <div className="home-logo">
+                <div class="home-logo">
                     <a href="">
-                        <img className="home-logo-img animated flip" src="img/logo.png" alt="imagm do logo square events">
+                        <img class="home-logo-img animated flip" src="img/logo.png" alt="imagm do logo square events">
                     </a>
                 </div>
 
 
-                <div className="home-buscar">
-                    <div className="home-corpo-buscar">
+                <div class="home-buscar">
+                    <div class="home-corpo-buscar">
 
-                        <div className="home-box-icones-bucsar">
-                            <input className="home-input" type="text" placeholder="Digite aqui para buscar">
+                        <div class="home-box-icones-bucsar">
+                            <input class="home-input" type="text" placeholder="Digite aqui para buscar">
                             </p>
                         </div>
                     </div>
                 </div>
 
 
-                <li className="home-button-crie-evento-header1">
+                <li class="home-button-crie-evento-header1">
                     <a href="#"> Login </a>
 
                 </li>
 
 
-                <li className="home-button-crie-evento-header2">
+                <li class="home-button-crie-evento-header2">
 
-                    <button className="btnEvento  ">
+                    <button class="btnEvento  ">
                         <a href="#"> + Crie seu Evento </a>
                     </button>
 
                 </li>
 
-                <li className="icon">
+                <li class="icon">
                     <!--Inclui o ícone do responsivo na lista-->
                     <a href="javascript:void(0);" onclick="myFunction()">&#9776;
                     </a>
@@ -75,10 +75,10 @@
 
     <div id="home-banner">
 
-        <img className="home-banner-img" src="img/banner.jpg" alt="banner do site">
+        <img class="home-banner-img" src="img/banner.jpg" alt="banner do site">
 
         <div id="home-banner-transparente">
-            <img className="home-logoarte-img" src="img/logoarte.png" alt="arte escrita do logo square events">
+            <img class="home-logoarte-img" src="img/logoarte.png" alt="arte escrita do logo square events">
         </div>
     </div>
 
@@ -89,51 +89,51 @@
     <!-- destaque -->
 
     <main id="home-section-destaque">
-        <div className="home-box-texto-destaque">
-            <p className="home-texto-destaque">
+        <div class="home-box-texto-destaque">
+            <p class="home-texto-destaque">
                 Eventos em destaque
             </p>
-            <hr className="home-destaque-hr">
+            <hr class="home-destaque-hr">
         </div>
 
         <div id="home-section-carrosel">
 
             <!-- ========== código do carrousel  -->
 
-            <div className="slider">
-                <div className="item">
+            <div class="slider">
+                <div class="item">
                     <img src="https://picsum.photos/id/239/550/550" alt="">
 
                 </div>
 
-                <div className="item">
+                <div class="item">
                     <img src="https://picsum.photos/id/240/550/550" alt="">
 
                 </div>
-                <div className="item">
+                <div class="item">
                     <img src="https://picsum.photos/id/241/550/550" alt="">
 
                 </div>
-                <div className="item">
+                <div class="item">
                     <img src="https://picsum.photos/id/242/550/550" alt="">
 
                 </div>
-                <div className="item">
+                <div class="item">
                     <img src="https://picsum.photos/id/243/550/550" alt="">
                 </div>
-                <div className="item">
+                <div class="item">
                     <img src="https://picsum.photos/id/250/550/550" alt="">
 
                 </div>
-                <div className="item">
+                <div class="item">
                     <img src="https://picsum.photos/id/252/550/550" alt="">
 
                 </div>
-                <div className="item">
+                <div class="item">
                     <img src="https://picsum.photos/id/255/550/550" alt="">
 
                 </div>
-                <div className="item">
+                <div class="item">
                     <img src="https://picsum.photos/id/247/550/550" alt="">
 
                 </div>
@@ -155,57 +155,59 @@
     <!-- beneficios -->
 
     <section id="home-section-beneficios">
-        <div className="home-box-texto-beneficios">
-            <h2 className="home-texto-h2-beneficios">
-                lorem
+        <div class="home-box-texto-beneficios">
+            <h2 class="home-texto-h2-beneficios">
+            Beneficios
             </h2>
 
-            <hr className="home-beneficios-hr">
+            <hr class="home-beneficios-hr">
 
-            <p className="home-texto-p-beneficios">
+            <p class="home-texto-p-beneficios">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione expedita dicta asperiores? Tempore velit, quisquam facilis maiores repellat, debitis numquam voluptatibus tenetur sed facere neque praesentium provident, magnam expedita veritatis.
             </p>
         </div>
 
 
         <section id="home-section-img1-beneficios">
-            <div className="home-box-img1-beneficios">
-                <div className="home-caixa-img1-beneficios">
+            <div class="home-box-img1-beneficios">
+                <div class="home-caixa-img1-beneficios">
                 </div>
-                <div className="home-div-img1-transparente">
-                    <img className="home-beneficios1-img" src="img/beneficios1.png" alt="imagem ">
+                <div class="home-div-img1-transparente">
+                    <img class="home-beneficios1-img" src="img/beneficios1.png" alt="imagem ">
                 </div>
             </div>
 
-            <div className="home-box-texto-beneficios-img1 animated bounceInDown">
-                <p className="home-box-texto-p1-beneficios ">
+            <div class="home-box-texto-beneficios-img1 animated bounceInDown">
+                <p class="home-box-texto-p1-beneficios ">
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit laborum suscipit reprehenderit quis. Magnam eaque aut maxime est, excepturi autem non laboriosam veniam veritatis. Nam nobis ipsa repellat maiores?
                 </p>
 
-                <button className="btn">
+                <button class="btn">
                     <a href=""> Inscreva-se </a>
                 </button>
             </div>
 
         </section>
 
+        <hr class="home-destaque-hr">
+
         <!-- ========================================== -->
 
         <section id="home-section-img2-beneficios">
-            <div className="home-box-img2-beneficios">
-                <div className="home-caixa-img2-beneficios">
+            <div class="home-box-img2-beneficios">
+                <div class="home-caixa-img2-beneficios">
                 </div>
-                <div className="home-div-img2-transparente">
-                    <img className="home-beneficios2-img" src="img/beneficios2.jpg" alt="imagem ">
+                <div class="home-div-img2-transparente">
+                    <img class="home-beneficios2-img" src="img/encontro.jpg" alt="imagem ">
                 </div>
             </div>
 
-            <div className="home-box-texto-beneficios-img2 animated bounceInLeft">
-                <p className="home-box-texto-p2-beneficios">
+            <div class="home-box-texto-beneficios-img2 animated bounceInLeft">
+                <p class="home-box-texto-p2-beneficios">
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit laborum suscipit reprehenderit quis. Magnam eaque aut maxime est, excepturi autem non laboriosam veniam veritatis. Nam nobis ipsa repellat maiores?
                 </p>
 
-                <button className="btn btn2">
+                <button class="btn btn2">
                     <a href=""> Inscreva-se </a>
                 </button>
 
@@ -216,22 +218,22 @@
 
 
     <section id="home-section-contador">
-        <img className="home-contador-img" src="img/road-2930115.jpg" alt="Imagem de uma mulher ao fundo codificando">
+        <!-- <img class="home-contador-img" src="img/road-2930115.jpg" alt="Imagem de uma mulher ao fundo codificando"> -->
 
-        <div className="home-section-box-contador">
+        <div class="home-section-box-contador">
 
-            <div className="home-contador-numeros">
-                <img className="home-contador-icone-img1" src="img/tickets.png" alt="">
-                <img className="home-contador-icone-img2" src="img/mapa.png" alt="">
-                <img className="home-contador-icone-img3" src="img/bandeira.png" alt="">
-                <img className="home-contador-icone-img4" src="img/comunidade.png" alt="">
+            <div class="home-contador-numeros">
+                <img class="home-contador-icone-img1" src="img/tickets.png" alt="">
+                <img class="home-contador-icone-img2" src="img/mapa.png" alt="">
+                <img class="home-contador-icone-img3" src="img/bandeira.png" alt="">
+                <img class="home-contador-icone-img4" src="img/comunidade.png" alt="">
             </div>
 
-            <div className="home-contador-descricao">
-                <h3 className="home-contador-descricao-h3-1"> 100 - Eventos Submetidos </h3>
-                <h3 className="home-contador-descricao-h3-2"> 20 - Eventos Realizados </h3>
-                <h3 className="home-contador-descricao-h3-3"> 400 - Comunidades </h3>
-                <h3 className="home-contador-descricao-h3-4"> 08 - Categorias </h3>
+            <div class="home-contador-descricao">
+                <h3 class="home-contador-descricao-h3-1"> 100 - Eventos Submetidos </h3>
+                <h3 class="home-contador-descricao-h3-2"> 20 - Eventos Realizados </h3>
+                <h3 class="home-contador-descricao-h3-3"> 400 - Comunidades </h3>
+                <h3 class="home-contador-descricao-h3-4"> 08 - Categorias </h3>
             </div>
 
 
@@ -241,35 +243,35 @@
     </section>
 
     <section id="home-section-mobile">
-        <div className="home-section-mobile-texto">
-            <p className="home-section-mobile-texto-p-button1">
+        <div class="home-section-mobile-texto">
+            <p class="home-section-mobile-texto-p-button1">
                 Acompanhe os
-                <button className="buttonMobile1">
+                <button class="buttonMobile1">
                     <a href=""> Eventos</a>
                 </button>
             </p>
-            <p className="home-section-mobile-texto-p-button2">
+            <p class="home-section-mobile-texto-p-button2">
                 pelo seu
-                <button className="buttonMobile2">
+                <button class="buttonMobile2">
                     <a href="">Celular</a>
                 </button>
             </p>
         </div>
 
-        <div className="home-section-mobile-box">
+        <div class="home-section-mobile-box">
 
             <div>
-                <img className="home-section-mobile-img" src="img/mobile.png" alt="">
+                <img class="home-section-mobile-img" src="img/mobile.png" alt="">
             </div>
-            <div className="home-section-mobile-box-texto animated bounceInUp">
-                <div className="home-section-mobile-box-texto-p">
-                    <p className="home-section-mobile-box-p">
+            <div class="home-section-mobile-box-texto animated bounceInUp">
+                <div class="home-section-mobile-box-texto-p">
+                    <p class="home-section-mobile-box-p">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam maxime non sit, dicta laudantium obcaecati quas explicabo repudiandae. Enim nesciunt vitae temporibus distinctio soluta molestias, placeat vero atque ad! Unde.
                     </p>
 
                 </div>
 
-                <button className="btn home-section-mobile-button-final">
+                <button class="btn home-section-mobile-button-final">
                     <a href=""> Inscreva-se </a>
                 </button>
 
@@ -286,29 +288,29 @@
 
     <footer id="home-footer">
 
-        <div className="home-footer-box1">
+        <div class="home-footer-box1">
 
-            <div className="home-footer-titulo">
-                <p className="home-footer-texto estiloFooter">
+            <div class="home-footer-titulo">
+                <p class="home-footer-texto estiloFooter">
                     Square Events
                 </p>
             </div>
 
-            <div className="home-footer-informacao">
+            <div class="home-footer-informacao">
 
-                <div className="home-footer-suaConta">
-                    <p className="estiloFooter">
+                <div class="home-footer-suaConta">
+                    <p class="estiloFooter">
                         Sua Conta
                     </p>
 
-                    <a className="estiloFooter" href=""> Ajuda (FAQ) </a>
+                    <a class="estiloFooter" href=""> Ajuda (FAQ) </a>
 
-                    <a className="estiloFooter" href=""> Cadastre-se </a>
+                    <a class="estiloFooter" href=""> Cadastre-se </a>
 
                 </div>
 
-                <div className="home-footer-redeSocial">
-                    <p className="estiloFooter">
+                <div class="home-footer-redeSocial">
+                    <p class="estiloFooter">
                         Redes Socias
                     </p>
                     <div>
@@ -318,11 +320,11 @@
                     </div>
                 </div>
 
-                <div className="home-footer-contato">
-                    <p className="estiloFooter">
+                <div class="home-footer-contato">
+                    <p class="estiloFooter">
                         Contato
                     </p>
-                    <p className="estiloFooter">
+                    <p class="estiloFooter">
                         <a href="mailto:contato@thoughtworks.com.br">contato@thoughtworks.com.br</a>
                     </p>
                 </div>
@@ -331,25 +333,25 @@
 
         </div>
 
-        <div className="home-footer-box2">
+        <div class="home-footer-box2">
 
-            <div className="home-footer-logo">
-                <a className="estiloFooter" href="">
-                    <img className="home-logoarte-footer" src="img/logoarte.png" alt="">
+            <div class="home-footer-logo">
+                <a class="estiloFooter" href="">
+                    <img class="home-logoarte-footer" src="img/logoarte.png" alt="">
                 </a>
 
 
             </div>
 
-            <div className="home-footer-nomeEventos">
-                <p className="estiloFooter"> @thoughtworks</p>
-                <p className="estiloFooter">
+            <div class="home-footer-nomeEventos">
+                <p class="estiloFooter"> @thoughtworks</p>
+                <p class="estiloFooter">
                     @SquareEvents
                 </p>
             </div>
 
-            <div className="home-footer-direitoReservado">
-                <p className="estiloFooter">
+            <div class="home-footer-direitoReservado">
+                <p class="estiloFooter">
                     Todos os direitos reservados
                 </p>
             </div>
