--- a/carrosel.html
+++ b/carrosel.html
@@ -21,37 +21,99 @@
     <div class="slider">
         <div class="item">
             <img src="https://picsum.photos/id/239/550/550" alt="">
+            <p>
+                Front end para inovação
+            </p>
+            <p>
+                02 de novembro de 2019
+            </p>
 
         </div>
         <div class="item">
             <img src="https://picsum.photos/id/240/550/550" alt="">
+            <p>
+                Front end para inovação
+            </p>
+            <p>
+                02 de novembro de 2019
+            </p>
+
 
         </div>
         <div class="item">
             <img src="https://picsum.photos/id/241/550/550" alt="">
+            <p>
+                Front end para inovação
+            </p>
+            <p>
+                02 de novembro de 2019
+            </p>
+
 
         </div>
         <div class="item">
             <img src="https://picsum.photos/id/242/550/550" alt="">
+            <p>
+                Front end para inovação
+            </p>
+            <p>
+                02 de novembro de 2019
+            </p>
+
 
         </div>
         <div class="item">
             <img src="https://picsum.photos/id/243/550/550" alt="">
+            <p>
+                Front end para inovação
+            </p>
+            <p>
+                02 de novembro de 2019
+            </p>
+
         </div>
         <div class="item">
             <img src="https://picsum.photos/id/244/550/550" alt="">
+            <p>
+                Front end para inovação
+            </p>
+            <p>
+                02 de novembro de 2019
+            </p>
+
 
         </div>
         <div class="item">
-            <img src="https://picsum.photos/id/245/550/550" alt="">
+            <img src="https://picsum.photos/id/240/550/550" alt="">
+            <p>
+                Front end para inovação
+            </p>
+            <p>
+                02 de novembro de 2019
+            </p>
+
 
         </div>
         <div class="item">
-            <img src="https://picsum.photos/id/246/550/550" alt="">
+            <img src="https://picsum.photos/id/254/550/550" alt="">
+            <p>
+                Front end para inovação
+            </p>
+            <p>
+                02 de novembro de 2019
+            </p>
+
 
         </div>
         <div class="item">
-            <img src="https://picsum.photos/id/247/550/550" alt="">
+            <img src="https://picsum.photos/id/253/550/550" alt="">
+            <p>
+                Front end para inovação
+            </p>
+            <p>
+                02 de novembro de 2019
+            </p>
+
 
         </div>
 
