--- a/dashTeste.html
+++ b/dashTeste.html
@@ -49,119 +49,336 @@
             </li>
         </ul>
     </nav>
-    <div class="main-content">
-        <main id="home-section-destaque">
-            <div class="home-box-texto-destaque">
-                <p class="home-texto-destaque">
-                    Eventos em destaque
-                </p>
-                <hr class="home-destaque-hr">
-            </div>
 
-            <div id="home-section-carrosel hidden">
 
-                <!-- ========== código do carrousel  -->
 
-                <div class="slider">
-                    <div class="item img-carrousel">
-                        <img class="img-carrousel" src="https://picsum.photos/id/239/550/550" alt="">
-                        <p>
-                            Meetup: Nerdzão
-                        </p>
-                        <p>
-                            data: 12/12/2019
-                        </p>
-
-                    </div>
-
-                    <div class="item">
-                        <img class="img-carrousel" src="https://picsum.photos/id/240/550/550" alt="">
-                        <p>
-                            Meetup: Nerdzão
-                        </p>
-                        <p>
-                            data: 12/12/2019
-                        </p>
-
-                    </div>
-                    <div class="item">
-                        <img class="img-carrousel" src="https://picsum.photos/id/241/550/550" alt="">
-                        <p>
-                            Meetup: Nerdzão
-                        </p>
-                        <p>
-                            data: 12/12/2019
-                        </p>
-
-                    </div>
-                    <div class="item">
-                        <img class="img-carrousel" src="https://picsum.photos/id/242/550/550" alt="">
-                        <p>
-                            Meetup: Nerdzão
-                        </p>
-                        <p>
-                            data: 12/12/2019
-                        </p>
-
-                    </div>
-                    <div class="item">
-                        <img class="img-carrousel" src="https://picsum.photos/id/243/550/550" alt="">
-                        <p>
-                            Meetup: Nerdzão
-                        </p>
-                        <p>
-                            data: 12/12/2019
-                        </p>
-                    </div>
-                    <div class="item">
-                        <img class="img-carrousel" src="https://picsum.photos/id/250/550/550" alt="">
-                        <p>
-                            Meetup: Nerdzão
-                        </p>
-                        <p>
-                            data: 12/12/2019
-                        </p>
-
-                    </div>
-                    <div class="item">
-                        <img class="img-carrousel" src="https://picsum.photos/id/252/550/550" alt="">
-                        <p>
-                            Meetup: Nerdzão
-                        </p>
-                        <p>
-                            data: 12/12/2019
-                        </p>
-
-                    </div>
-                    <div class="item">
-                        <img class="img-carrousel" src="https://picsum.photos/id/255/550/550" alt="">
-                        <p>
-                            Meetup: Nerdzão
-                        </p>
-                        <p>
-                            data: 12/12/2019
-                        </p>
-
-                    </div>
-                    <div class="item ">
-                        <img class="img-carrousel" src="https://picsum.photos/id/247/550/550" alt="">
-                        <p>
-                            Meetup: Nerdzão
-                        </p>
-                        <p>
-                            data: 12/12/2019
-                        </p>
-                    </div>
-                </div>
-                <!-- ========== código do carrousel  -->
-            </div>
-        </main>
-
-    </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+    <section>
+        <!--for demo wrap-->
+        <h1>Indicadores</h1>
+        <div class="tbl-header">
+          <table cellpadding="0" cellspacing="0" border="0">
+            <thead>
+              <tr>
+                <th>Comunidade</th>
+                <th>Título</th>
+                <th>Data</th>
+                <th>Categoria</th>
+                <th>E-mail</th>
+                <th>Texto</th>
+                <th> <img class="logo-check" src="img/logo.png" alt=""> </th>
+              </tr>
+            </thead>
+          </table>
+        </div>
+        <div class="tbl-content">
+          <table cellpadding="0" cellspacing="0" border="0">
+            <tbody>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>-0.36%</td>
+                          <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto voluptates, sed commodi enim facere labore, quos mollitia fuga minus distinctio a! Ipsa necessitatibus eveniet suscipit, culpa nihil quasi accusamus quam!</td>
+                <td>
+                    <button>
+                        aprovar
+                    </button>
+                    <button>
+                        reprovar
+                    </button>
+                </td>
+              </tr>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>lorem</td>
+                          <td>
+                              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque beatae vel enim quod voluptatum molestiae possimus sed? Nisi facilis tempora corrupti sapiente maiores laboriosam, voluptatibus, necessitatibus fugit adipisci officiis illo!
+                          </td>
+                <td>
+                    <button>
+                        aprovar
+                    </button>
+                    <button>
+                        reprovar
+                    </button>
+                </td>
+              </tr>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>-0.36%</td>
+                          <td>+2.01</td>
+                <td>
+                    <button>
+                        aprovar
+                    </button>
+                    <button>
+                        reprovar
+                    </button>
+                </td>
+              </tr>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>-0.36%</td>
+                          <td>+2.01</td>
+                <td>
+                    <button>
+                        aprovar
+                    </button>
+                    <button>
+                        reprovar
+                    </button>
+                </td>
+              </tr>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>-0.36%</td>
+                          <td>+2.01</td>
+                <td>
+                    <button>
+                        aprovar
+                    </button>
+                    <button>
+                        reprovar
+                    </button>
+                </td>
+              </tr>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>-0.36%</td>
+                          <td>+2.01</td>
+                <td>
+                    <button>
+                        aprovar
+                    </button>
+                    <button>
+                        reprovar
+                    </button>
+                </td>
+              </tr>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>-0.36%</td>
+                          <td>
+                              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quae ducimus laborum recusandae temporibus provident nobis amet earum doloremque consectetur minima, rerum placeat sed, magnam eveniet illum impedit, molestiae harum?
+                          </td>
+                <td>
+                    <button>
+                        aprovar
+                    </button>
+                    <button>
+                        reprovar
+                    </button>
+                </td>
+              </tr>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>-0.36%</td>
+                          <td>+2.01</td>
+                <td>-0.36%</td>
+              </tr>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>-0.36%</td>
+                          <td>+2.01</td>
+                <td>-0.36%</td>
+              </tr>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>-0.36%</td>
+                          <td>+2.01</td>
+                <td>-0.36%</td>
+              </tr>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>-0.36%</td>
+                          <td>+2.01</td>
+                <td>-0.36%</td>
+              </tr>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>-0.36%</td>
+                          <td>+2.01</td>
+                <td>-0.36%</td>
+              </tr>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>-0.36%</td>
+              </tr>
+              <tr>
+                <td>AAD</td>
+                <td>AUSENCO</td>
+                <td>$2.38</td>
+                <td>-0.01</td>
+                <td>-1.36%</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>ADELAIDE</td>
+                <td>$3.22</td>
+                <td>+0.01</td>
+                <td>+1.36%</td>
+              </tr>
+              <tr>
+                <td>XXD</td>
+                <td>ADITYA BIRLA</td>
+                <td>$1.02</td>
+                <td>-1.01</td>
+                <td>+2.36%</td>
+              </tr>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>-0.36%</td>
+              </tr>
+              <tr>
+                <td>AAD</td>
+                <td>AUSENCO</td>
+                <td>$2.38</td>
+                <td>-0.01</td>
+                <td>-1.36%</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>ADELAIDE</td>
+                <td>$3.22</td>
+                <td>+0.01</td>
+                <td>+1.36%</td>
+              </tr>
+              <tr>
+                <td>XXD</td>
+                <td>ADITYA BIRLA</td>
+                <td>$1.02</td>
+                <td>-1.01</td>
+                <td>+2.36%</td>
+              </tr>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>-0.36%</td>
+              </tr>
+              <tr>
+                <td>AAD</td>
+                <td>AUSENCO</td>
+                <td>$2.38</td>
+                <td>-0.01</td>
+                <td>-1.36%</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>ADELAIDE</td>
+                <td>$3.22</td>
+                <td>+0.01</td>
+                <td>+1.36%</td>
+              </tr>
+              <tr>
+                <td>XXD</td>
+                <td>ADITYA BIRLA</td>
+                <td>$1.02</td>
+                <td>-1.01</td>
+                <td>+2.36%</td>
+              </tr>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>-0.36%</td>
+              </tr>
+              <tr>
+                <td>AAD</td>
+                <td>AUSENCO</td>
+                <td>$2.38</td>
+                <td>-0.01</td>
+                <td>-1.36%</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>ADELAIDE</td>
+                <td>$3.22</td>
+                <td>+0.01</td>
+                <td>+1.36%</td>
+              </tr>
+              <tr>
+                <td>XXD</td>
+                <td>ADITYA BIRLA</td>
+                <td>$1.02</td>
+                <td>-1.01</td>
+                <td>+2.36%</td>
+              </tr>
+              <tr>
+                <td>AAC</td>
+                <td>AUSTRALIAN COMPANY </td>
+                <td>$1.38</td>
+                <td>+2.01</td>
+                <td>-0.36%</td>
+              </tr>
+              <tr>
+                <td>AAD</td>
+                <td>AUSENCO</td>
+                <td>$2.38</td>
+                <td>-0.01</td>
+                <td>-1.36%</td>
+              </tr>
+              <tr>
+                <td>AAX</td>
+                <td>ADELAIDE</td>
+                <td>$3.22</td>
+                <td>+0.01</td>
+                <td>+1.36%</td>
+              </tr>
+              <tr>
+                <td>XXD</td>
+                <td>ADITYA BIRLA</td>
+                <td>$1.02</td>
+                <td>-1.01</td>
+                <td>+2.36%</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
+      
 
 </body>
 
