--- a/dashTeste.html
+++ b/dashTeste.html
@@ -44,15 +44,13 @@
                 <a href="#" onclick="menu('pendentes')"><span class="glyphicon glyphicon-list-alt"></span><span id="pendentes" class="nav-label">Eventos Pendentes</span></a>
                 <a href="#" onclick="menu('aprovados')"><span class="glyphicon glyphicon-envelope"></span><span id="aprovados" class="nav-label">Eventos Aprovados</span></a>
                 <a href="#" onclick="menu('apadrinhados')"><span class="glyphicon glyphicon-cog"></span><span id="apadrinhados" class="nav-label">Eventos Apadrinhados</span></a>
-                <a href="#" onclick="menu('dashboard')"><span class="glyphicon glyphicon-film"></span><span id="dashboard" class="nav-label">Dashboard</span></a>
-
             </li>
         </ul>
     </nav>
 
 
 
-    <section>
+    <section class="dashboard-section-indicadores">
         <!--for demo wrap-->
         <h1>Indicadores</h1>
         <div class="tbl-header">
