--- a/carrosel.html
+++ b/carrosel.html
@@ -20,13 +20,15 @@
 
     <div class="slider">
         <div class="item">
-            <img src="https://picsum.photos/id/239/550/550" alt="">
-            <p>
-                Front end para inovação
-            </p>
-            <p>
-                02 de novembro de 2019
-            </p>
+            <div class="item-carrosel"  >
+                <img src="https://picsum.photos/id/239/550/550" alt="">
+                <p>
+                    Front end para inovação
+                </p>
+                <p>
+                    02 de novembro de 2019
+                </p>
+            </div>
 
         </div>
         <div class="item">
