--- a/dashPendente.html
+++ b/dashPendente.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="dashTeste.css">
+    <link rel="stylesheet" href="dash.Pendente.css">
     <script defer src="dashTeste.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" />
@@ -79,11 +79,11 @@
                 <td>-0.36%</td>
                           <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto voluptates, sed commodi enim facere labore, quos mollitia fuga minus distinctio a! Ipsa necessitatibus eveniet suscipit, culpa nihil quasi accusamus quam!</td>
                 <td>
-                    <button class="btnAprovar" >
-                        aprovar
+                    <button class="btnApadrinhar" >
+                        apadrinhar
                     </button>
-                    <button class="btnReprovar" >
-                        reprovar
+                    <button class="btnEmail" >
+                        e-mail
                     </button>
                 </td>
               </tr>
@@ -97,12 +97,12 @@
                               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque beatae vel enim quod voluptatum molestiae possimus sed? Nisi facilis tempora corrupti sapiente maiores laboriosam, voluptatibus, necessitatibus fugit adipisci officiis illo!
                           </td>
                 <td>
-                  <button class="btnAprovar" >
-                    aprovar
-                </button>
-                <button class="btnReprovar" >
-                    reprovar
-                </button>
+                    <button class="btnApadrinhar" >
+                        apadrinhar
+                    </button>
+                    <button class="btnEmail" >
+                        e-mail
+                    </button>
                 </td>
               </tr>
               <tr>
@@ -113,12 +113,12 @@
                 <td>-0.36%</td>
                           <td>+2.01</td>
                 <td>
-                  <button class="btnAprovar" >
-                    aprovar
-                </button>
-                <button class="btnReprovar" >
-                    reprovar
-                </button>
+                    <button class="btnApadrinhar" >
+                        apadrinhar
+                    </button>
+                    <button class="btnEmail" >
+                        e-mail
+                    </button>
                 </td>
               </tr>
               <tr>
@@ -129,12 +129,12 @@
                 <td>-0.36%</td>
                           <td>+2.01</td>
                 <td>
-                  <button class="btnAprovar" >
-                    aprovar
-                </button>
-                <button class="btnReprovar" >
-                    reprovar
-                </button>
+                    <button class="btnApadrinhar" >
+                        apadrinhar
+                    </button>
+                    <button class="btnEmail" >
+                        e-mail
+                    </button>
                 </td>
               </tr>
               <tr>
@@ -145,12 +145,12 @@
                 <td>-0.36%</td>
                           <td>+2.01</td>
                 <td>
-                  <button class="btnAprovar" >
-                    aprovar
-                </button>
-                <button class="btnReprovar" >
-                    reprovar
-                </button>
+                    <button class="btnApadrinhar" >
+                        apadrinhar
+                    </button>
+                    <button class="btnEmail" >
+                        e-mail
+                    </button>
                 </td>
               </tr>
               <tr>
@@ -161,12 +161,12 @@
                 <td>-0.36%</td>
                           <td>+2.01</td>
                 <td>
-                  <button class="btnAprovar" >
-                    aprovar
-                </button>
-                <button class="btnReprovar" >
-                    reprovar
-                </button>
+                    <button class="btnApadrinhar" >
+                        apadrinhar
+                    </button>
+                    <button class="btnEmail" >
+                        e-mail
+                    </button>
                 </td>
               </tr>
               <tr>
@@ -179,12 +179,12 @@
                               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quae ducimus laborum recusandae temporibus provident nobis amet earum doloremque consectetur minima, rerum placeat sed, magnam eveniet illum impedit, molestiae harum?
                           </td>
                 <td>
-                  <button class="btnAprovar" >
-                    aprovar
-                </button>
-                <button class="btnReprovar" >
-                    reprovar
-                </button>
+                    <button class="btnApadrinhar" >
+                        apadrinhar
+                    </button>
+                    <button class="btnEmail" >
+                        e-mail
+                    </button>
                 </td>
               </tr>
             </tbody>
