--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
+
     <title>home</title>
 </head>
 
@@ -372,7 +373,7 @@
                 <div class="home-caixa-img1-beneficios">
                 </div>
                 <div class="home-div-img1-transparente">
-                    <img class="home-beneficios1-img" src="img/beneficios1.png" alt="imagem ">
+                    <img class="home-beneficios1-img" src="img/beneficios4.png" alt="imagem ">
                 </div>
             </div>
 
@@ -398,7 +399,7 @@
                 <div class="home-caixa-img2-beneficios">
                 </div>
                 <div class="home-div-img2-transparente">
-                    <img class="home-beneficios2-img" src="img/encontro.jpg" alt="imagem ">
+                    <img class="home-beneficios2-img" src="img/beneficios5.png" alt="imagem ">
                 </div>
             </div>
 
@@ -515,10 +516,11 @@
                     <p class="estiloFooter">
                         Redes Socias
                     </p>
-                    <div>
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
+                    <div class="home-icones-footer">
+                        <img class="home-icone-facebook" src="img/facebook (1).png" alt="">
+                        <img class="home-icone-instagram" src="img/instagram-logo.png" alt="">
+                        <img class="home-icone-linkedin" src="img/linkedin.png" alt="">
+                        <img class="home-icone-email" src="img/email.png" alt="">
                     </div>
                 </div>
 
