--- a/index.html
+++ b/index.html
@@ -126,10 +126,6 @@
                             </form>
                         </div>
                     </div>
-
-
-
-
             </div>
 
 
@@ -143,7 +139,7 @@
         </div>
 
         <div class="div-tres">
-            <img src="./img/Reflections on the March _ Libby VanderPloeg - Não Me Mande Flores.jfif" class="banner-1" alt="">
+            <img src="./img/road-2930115.jpg" class="banner-1" alt="">
         </div>
     </main>
 </body>
