--- a/eventos.html
+++ b/eventos.html
@@ -2,14 +2,16 @@
 <html lang="pt-br">
 
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="eventos.css">
-    <script defer src="eventos.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+
+    <script defer src="eventos.js"></script>
+
 
     <title>eventos</title>
 </head>
@@ -69,6 +71,16 @@
 
     <!-- fim do header -->
 
+    <section class="eventos-banner-section">
+        <img  class="eventos-banner-img" src="img/woman-contador.jpg" alt="">
+        <div class="eventos-banner-img">
+            <p class="eventos-p-texto-transparente">
+                Acompanhe os eventos da thoughtworks!
+            </p>
+        </div>
+    </section>
+
+
     <!-- ==================================== -->
 
     <main id="home-section-destaque">
@@ -84,200 +96,244 @@
             <!-- ========== código do carrousel  -->
 
             <div class="slider">
-                <div class="item img-carrousel">
-                    <img class="img-carrousel" src="https://picsum.photos/id/239/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
-
-                </div>
-
                 <div class="item">
-                    <img class="img-carrousel" src="https://picsum.photos/id/240/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
+                    <div class="item-carrosel">
+                        <img src="https://picsum.photos/id/239/550/550" alt="">
+                        <p class="carrosel-card-categoria">
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
 
-                </div>
-                <div class="item">
-                    <img class="img-carrousel" src="https://picsum.photos/id/241/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+                    </div>
 
                 </div>
                 <div class="item">
-                    <img class="img-carrousel" src="https://picsum.photos/id/242/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
+                    <div class="item-carrosel">
+
+                        <img src="https://picsum.photos/id/240/550/550" alt="">
+                        <p>
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                    <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+                    </div>
+
+
+
 
                 </div>
                 <div class="item">
-                    <img class="img-carrousel" src="https://picsum.photos/id/243/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
-                </div>
-                <div class="item">
-                    <img class="img-carrousel" src="https://picsum.photos/id/250/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
+
+                    <div class="item-carrosel">
+
+                        <img src="https://picsum.photos/id/241/550/550" alt="">
+                        <p class="carrosel-card-categoria">
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                    <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+
+                    </div>
+
+
 
                 </div>
                 <div class="item">
-                    <img class="img-carrousel" src="https://picsum.photos/id/252/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
+                    <div class="item-carrosel">
+
+                        <img src="https://picsum.photos/id/241/550/550" alt="">
+                        <p class="carrosel-card-categoria">
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                        <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+
+                    </div>
+
 
                 </div>
                 <div class="item">
-                    <img class="img-carrousel" src="https://picsum.photos/id/255/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
+                    <div class="item-carrosel">
+
+                        <img src="https://picsum.photos/id/241/550/550" alt="">
+                        <p class="carrosel-card-categoria">
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                        <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+
+                    </div>
 
                 </div>
-                <div class="item ">
-                    <img class="img-carrousel" src="https://picsum.photos/id/247/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
+                <div class="item">
+                    <div class="item-carrosel">
+
+                        <img src="https://picsum.photos/id/241/550/550" alt="">
+                        <p class="carrosel-card-categoria">
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                        <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+
+                    </div>
+
+
                 </div>
-            </div>
+                <div class="item">
+                    <div class="item-carrosel">
+
+                        <img src="https://picsum.photos/id/241/550/550" alt="">
+                        <p class="carrosel-card-categoria">
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                        <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+
+                    </div>
+
+
+                </div>
+                <div class="item">
+                    <div class="item-carrosel">
+
+                        <img src="https://picsum.photos/id/241/550/550" alt="">
+                        <p class="carrosel-card-categoria">
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                        <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+
+                    </div>
+
+
+                </div>
+                <div class="item">
+                    <div class="item-carrosel">
+
+                        <img src="https://picsum.photos/id/241/550/550" alt="">
+                        <p class="carrosel-card-categoria">
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                        <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+
+                    </div>
+
+
+                </div>
+
             <!-- ========== código do carrousel  -->
+
         </div>
 
-        <div id="home-section-carrosel">
 
-            <!-- ========== código do carrousel 2 -->
-
-            <div class="slider">
-                <div class="item">
-                    <img src="https://picsum.photos/id/239/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
-
-                </div>
-
-                <div class="item">
-                    <img src="https://picsum.photos/id/240/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
-
-                </div>
-                <div class="item">
-                    <img src="https://picsum.photos/id/241/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
-
-                </div>
-                <div class="item">
-                    <img src="https://picsum.photos/id/242/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
-
-                </div>
-                <div class="item">
-                    <img src="https://picsum.photos/id/243/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
-                </div>
-                <div class="item">
-                    <img src="https://picsum.photos/id/250/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
-
-                </div>
-                <div class="item">
-                    <img src="https://picsum.photos/id/252/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
-
-                </div>
-                <div class="item">
-                    <img src="https://picsum.photos/id/255/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
-
-                </div>
-                <div class="item">
-                    <img src="https://picsum.photos/id/247/550/550" alt="">
-                    <p>
-                        Meetup: Nerdzão
-                    </p>
-                    <p>
-                        data: 12/12/2019
-                    </p>
-                </div>
-            </div>
             <!-- ========== código do carrousel  -->
         </div>
 
     </main>
 
     <!-- ============ footer -->
+
 
     <footer id="home-footer">
 
@@ -306,10 +362,11 @@
                     <p class="estiloFooter">
                         Redes Socias
                     </p>
-                    <div>
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
+                    <div class="home-icones-footer">
+                        <img class="home-icone-facebook" src="img/facebook (1).png" alt="">
+                        <img class="home-icone-instagram" src="img/instagram-logo.png" alt="">
+                        <img class="home-icone-linkedin" src="img/linkedin.png" alt="">
+                        <img class="home-icone-email" src="img/email.png" alt="">
                     </div>
                 </div>
 
