alteração na página faq

--- a/faq.html
+++ b/faq.html
@@ -26,29 +26,31 @@
           <div class="faq-question">
             <input id="q1" type="checkbox" class="panel">
             <div class="plus">+</div>
-            <label for="q1" class="panel-title">What is the meaning of life?</label>
-            <div class="panel-content">42</div>
+            <label for="q1" class="panel-title">Como faço para realizar um evento?</label>
+            <div class="panel-content">Simples, busque em nosso site os botões de inscreva-se, siga os passos e cadastre sua comunidade, envie uma proposta de evento e assim que aprovado, seu evento será realizado na data sugerida!</div>
           </div>
           
           <div class="faq-question">
             <input id="q2" type="checkbox" class="panel">
             <div class="plus">+</div>
-            <label for="q2" class="panel-title">How much wood would a woodchuck chuck?</label>
-            <div class="panel-content">A woodchuck would chuck all the wood he could chuck, if a woodchuck could chuck wood!</div>
+            <label for="q2" class="panel-title">Como funciona os espaços?</label>
+            <div class="panel-content">O espaço é disponibilizado pela ThougthWorks. Lá tem 02 ambientes para realização dos eventos o "Lounge" (ambiente com 60 lugares) e a "Sala de Reunião" (ambiente com 20 lugares), ao se cadastrar você irá escolher o espaço que melhor lhe atende!</div>
           </div>
           
           <div class="faq-question">
             <input id="q3" type="checkbox" class="panel">
             <div class="plus">+</div>
-            <label for="q3" class="panel-title">What happens if Pinocchio says, "my nose will grow now"?</label>
-            <div class="panel-content">Certain questions are better left &nbsp; <a href="https://en.wikipedia.org/wiki/The_Unanswered_Question" target="_blank">unanswered</a></div>
+            <label for="q3" class="panel-title">Quanto custa para realizar um evento na ThoughtWorks?</label>
+            <div class="panel-content">Acredite os eventos são gratuitos. Eles ocorrem em formato de "talks", apresentações e trocas de experiências sobre os temas indicados, além disso pode rolar um "coffe", para a comunidade que está realizando o evento!  Acesse:&nbsp; <a href="https://squareevents"  target="_blank">squareevents</a> e se inscreva!</div>
           </div>
 
           <div class="faq-question">
                 <input id="q4" type="checkbox" class="panel">
                 <div class="plus">+</div>
-                <label for="q4" class="panel-title">How much wood would a woodchuck chuck?</label>
-                <div class="panel-content">A woodchuck would chuck all the wood he could chuck, if a woodchuck could chuck wood!</div>
+                <label for="q4" class="panel-title">Quais dias estes eventos ocorrem?</label>
+                <div class="panel-content">
+                  Os eventos ocorrem de segundas à sextas-feiras das 19:00 ás 22:00 e aos sábados das 10:00 ás 17:00
+                </div>
               </div>
 
         </div>
